<resources>
    <string name="app_name">customBus</string>
    <string name="cb_arrived">已到</string>
    <string name="cb_destance">距离</string>
    <string name="cb_km">公里</string>
    <string name="cb_mi">米</string>
    <string name="cb_minutes">分钟</string>
    <string name="cb_wait_countdown">等待倒计时</string>
    <string name="cb_no_start">行程未开始</string>
    <string name="cb_day">天</string>
    <string name="cb_hour">时</string>
    <string name="cb_fen">分</string>
    <string name="cb_start_countdown">行程开始倒计时</string>
    <string name="cb_slider_start">滑动开始行程</string>
    <string name="cb_check_ticket">验票</string>
    <string name="cb_go_next">前往下一站</string>
    <string name="cb_wait_timeout">等待已超时</string>
    <string name="cb_passenger_info">乘客信息</string>
    <string name="cb_already_get_on">已上车</string>
    <string name="cb_input_ticket_code">请输入车票码</string>
    <string name="cb_name">姓名</string>
    <string name="cb_start_site">起点</string>
    <string name="cb_end_site">终点</string>
    <string name="cb_person_num">人数</string>
    <string name="cb_remark">备注</string>
    <string name="cb_confirm_get_on">确认上车</string>
    <string name="cb_go_to">去</string>
    <string name="cb_finish">滑动结束行程</string>
    <string name="cb_cancel">取消</string>
    <string name="cb_code_hint">请输入车票码开始验票</string>
    <string name="cb_code">请输入车票码</string>
    <string name="cb_slider_check">滑动开始验票</string>
    <string name="cb_slider_arrive">滑动到达站点</string>
    <string name="cb_please_check">请开始验票</string>
    <string name="cb_running">行程中</string>
    <string name="cb_arrive_station">到达站点</string>
    <string name="cb_alredy_check">已验票</string>
    <string name="cb_no_check">未验票</string>
    <string name="cb_alredy_jump">已跳过</string>

    <string name="cb_not_check">本站没有乘客无需验票</string>
    <string name="cb_slider_go_next">滑动前往下一站</string>
    <string name="cb_arrive_end_station">到达终点站</string>

    <string name="cb_go_next_station">前往\n下一站</string>
    <string name="cb_dialog_title">是否前往下一站</string>
    <string name="cb_dialog_hint">还有乘客订单未支付或未确认，前往下一站将会自动跳过这些订单，未支付订单将自动取消，是否前往？</string>


    <string name="canceled_order">当前订单已被取消:)</string>
    <string name="backed_order">当前订单已被收回:)</string>

</resources>
