<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/corners_white_3dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cb_dialog_title"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:minHeight="40dp"
        android:text="@string/cb_dialog_hint"
        android:textColor="@color/color_999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cb_go_next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/corners_button_bg"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_3C98E3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


</LinearLayout>