<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/f2f2f2_4dp_edit_bg"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_search"
                android:layout_marginLeft="8dp"/>

            <EditText
                android:id="@+id/et_ticket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/cb_code"
                android:textColorHint="@color/color_cccccc"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/cb_cancel"
            android:gravity="center"
            android:textColor="@color/color_3C98E3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_f2f2f2">
        <LinearLayout
            android:id="@+id/lin_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_top_white_4dp_bg">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_name"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/color_999999"/>
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="16dp"
                        android:text=""
                        android:textColor="@color/color_333333"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_start_site"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/color_999999"/>
                    <TextView
                        android:id="@+id/tv_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="16dp"
                        android:text=""
                        android:textColor="@color/color_333333"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_end_site"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/color_999999"/>
                    <TextView
                        android:id="@+id/tv_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="16dp"
                        android:text=""
                        android:textColor="@color/color_333333"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_person_num"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/color_999999"/>
                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="16dp"
                        android:text="0"
                        android:textColor="@color/color_333333"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="25dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_remark"
                        android:layout_marginLeft="12dp"
                        android:textColor="@color/color_999999"/>
                    <TextView
                        android:id="@+id/tv_remark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="16dp"
                        android:text=""
                        android:textColor="@color/color_333333"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/cb_line_bg"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bottom_white_4dp_bg"
                android:gravity="center">
                <com.easymi.component.widget.LoadingButton
                    android:id="@+id/btn_get_on"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/corners_button_bg"
                    android:elevation="0.5dp"
                    android:gravity="center"
                    android:text="@string/cb_confirm_get_on"
                    android:textColor="@color/white"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>