<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:SlideToUnlockView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="vertical"
        android:background="@color/color_20212C">
        <LinearLayout
            android:id="@+id/lin_no_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:gravity="right"
                    android:text="古桥村"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_zx_right_cheft"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:gravity="left"
                    android:text="邯郸城"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2019年2月12日 06:30出发"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_running"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_go_to"
                        android:textColor="@color/color_698ABA"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="锦州汽车站"
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="距离0公里 0分钟"
                    android:textColor="@color/color_698ABA"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09:24"
                    android:textColor="@color/color_089A55"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_wait_countdown"
                    android:textSize="12sp"
                    android:textColor="@color/color_698ABA"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f5f5f5">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/white">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f5f5f5">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/lin_start_countdown"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/color_089A55"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_day"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_999999"/>
                <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/color_089A55"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_hour"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_999999"/>
                <TextView
                    android:id="@+id/tv_fen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/color_089A55"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_fen"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_999999"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_start_countdown"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/color_999999"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/control_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.easymi.component.widget.CustomSlideToUnlockView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal|bottom"
                android:elevation="0.5dp"
                SlideToUnlockView:sliderTextHint="滑动开始行程"
                SlideToUnlockView:sliderTextSize="16" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>