<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_20212C"
    android:orientation="vertical">

    <com.easymi.component.widget.CusToolbar
        android:id="@+id/cus_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_f2f2f2">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/corners_4dp_white_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/cb_station_large"/>

                    <TextView
                        android:id="@+id/tv_station_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="锦州汽车站"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/color_333333" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_ticket_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="已检票 0   未检票 0"
                    android:textColor="@color/color_089A55" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09:24"
                    android:textColor="@color/color_089A55"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_countdown_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_wait_countdown"
                    android:textColor="@color/color_999999"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_f2f2f2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_top_white_4dp_bg">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_bottom"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:elevation="5dp">
            <TextView
                android:id="@+id/tv_no_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:background="@drawable/f2f2f2_4dp_edit_bg"
                android:text="@string/cb_code_hint"
                android:gravity="center"
                android:textColor="@color/color_cccccc"
                android:visibility="visible"/>
            <com.easymi.component.widget.LoadingButton
                android:id="@+id/btn_go_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/corners_button_bg"
                android:elevation="0.5dp"
                android:gravity="center"
                android:text="@string/cb_go_next"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>